@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load cms_tags placeholder_tags %}
+{% load cms_tags %}
 
 {% block content %}
 <h2 class="page_title">{% show_editable_model request.current_page "page_title" %}</h2>
