@@ -196,3 +196,5 @@ Please see Install/2.4 release notes *before* attempting to upgrade to version 2
 - Object level permission support for Placeholder
 - Configuration for plugin custom modules and labels in the toolbar UI
 - Added copy-lang subcommand to copy content between languages
+- Added static_placeholder templatetag
+- Moved render_placeholder from placeholder_tags to cms_tags
